k8s/whoami-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami
  namespace: traefik
spec:
  parentRefs:
    - name: traefik-gateway # Name of the Gateway that Traefik creates when you enable the Gateway API provider
  hostnames:
    - "whoami.docker.localhost"
    # - "velen.home.arpa"
    - "homelab.home.arpa"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /whoami
      backendRefs:
        - name: whoami
          port: 80
